fix port usage